--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">epam_laba_16</string>
+    <string name="list_is_empty">List is empty...</string>
 </resources>
